# my_test_package2

./: CMakeLists.txt  package.xml
description/: example_gazebo.xacro  rover.urdf.xacro  rover_gazebo.xacro  simbot.urdf.xacro  simbot_include.xacro
launch/: rsp.launch.py  talker.launch.py
