<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>my_test_package2</name>
  <version>0.0.0</version>
  <description>Ths is my first package, it should just run the talker and listener nodes when asked.</description>
  <maintainer email="alberto@todo.todo">alberto</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <exec_depend>demo_nodes_cpp</exec_depend>
  <exec_depend>demo_nodes_py</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

# 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 - ignore.

